src/main/resources/Krakatau-master/tests/assembler/bad/verticaltab.j
.class public vt.super java/lang/Object
.end class
